force-app/main/default/objects/HabilidadeContato__c/HabilidadeContato__c.object-meta.xml
<CustomObject>
    <description>Usado como objeto de junção entre os objetos Contato e Habilidade</description>
    <label>Habilidade do Contato</label>
    <nameField>
        <displayFormat>HABIL-{0000}</displayFormat>
        <label>Habilidade do Contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Habilidade do Contato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>