force-app/main/default/objects/HabilidadeContato__c/fields/Habilidade__c.field-meta.xml
<CustomField>
    <fullName>Habilidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Habilidade</label>
    <referenceTo>Habilidade__c</referenceTo>
    <relationshipLabel>Habilidade do Contato</relationshipLabel>
    <relationshipName>Habilidade_do_Contato</relationshipName>
    <type>Lookup</type>
</CustomField>