force-app/main/default/objects/HabilidadeContato__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Grau de habilidade do Herói</description>
    <inlineHelpText>Grau de habilidade do Herói</inlineHelpText>
    <label>Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>