force-app/main/default/objects/HabilidadeContato__c/fields/NomeHabilidade__c.field-meta.xml
<CustomField>
    <fullName>NomeHabilidade__c</fullName>
    <description>Exibe o nome da Habilidade</description>
    <formula>Habilidade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Exibe o nome da Habilidade</inlineHelpText>
    <label>Nome da Habilidade</label>
    <type>Text</type>
</CustomField>