force-app/main/default/objects/HabilidadeContato__c/validationRules/Status_permitido_para_alterar_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_permitido_para_alterar_Level</fullName>
    <active>true</active>
    <description>Regra de validação para verificar status do contato permitindo ou não a alteração do level</description>
    <errorConditionFormula>AND(
     OR( ISCHANGED( Level__c ),
         AND( ISNEW(), NOT(ISNULL( Level__c ))) 
     ),
NOT(ISPICKVAL(Contato__r.StatusCandidato__c , &quot;Em Treinamento&quot; )),
NOT(ISPICKVAL(Contato__r.StatusCandidato__c , &quot;Reprovado no Treinamento&quot; )),
NOT(ISPICKVAL(Contato__r.StatusCandidato__c , &quot;Aprovado no Treinamento&quot; )),
NOT(ISPICKVAL(Contato__r.StatusCandidato__c , &quot;AprovadoDireto&quot; )) 
)</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>Não é permitido alterar o Level no status atual do candidato.</errorMessage>
</ValidationRule>